# receptor

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 18629b035c2e_marketplace_in_product.py  2cae9a1f99ef_meta_rename.py  3712942a80ce_payments.py  650e9c0da335_create_menu_table.py  73cdaafa69b1_create_user_id_in_menu_table.py  9083ab78db41_create_product_and_its_type.py  b97511275fa0_prices_in_menus.py  d3ffb7bdc644_user_model.py
receptor/: config.py  main.py
receptor/api/: deps.py  error_handlers.py  router.py
receptor/api/schemas/: menu.py  product.py  user.py
receptor/api/v1/: menu.py  menus.py  products.py  users.py
receptor/core/: admin.py  errors.py  logger.py  types.py
receptor/core/domain/: marketplaces.py  product_categories.py  regions.py  settings_limits.py  units.py  user_providers.py
receptor/core/domain/account_payment/: account_entry_meta_kind.py  (+4 more)
receptor/db/: admin.py  engine.py
receptor/db/models/: __init__.py  base.py  menu.py  product.py  product_type.py  user.py  user_product.py  user_settings.py
receptor/dependencies/: deps.py
receptor/external_services/ai/: abstract_ai_client.py  chad_ai_client.py
receptor/external_services/payments/: abstract_payment_provider.py  yoo_kassa_provider.py
receptor/repositories/: __init__.py  base_crud.py  menu.py  menu_repo.py  payment_repo.py  product.py  product_repo.py  user.py  user_excluded_product_repo.py  user_repo.py  user_settings_repo.py
receptor/schemas/: menu.py  user_settings.py
receptor/services/: __init__.py  abstract_crud.py  accounting_service.py  ai_service.py  menu.py  menu_pdf_service.py  menu_service.py  payment_service.py  product.py  product_service.py  user.py  user_service.py  user_settings_service.py
receptor/services/dto/: base.py  product.py
receptor/services/menu/: menu_service.py  product_service.py
receptor/services/user/: user_excluded_products_service.py  user_service.py  user_settings_service.py
receptor/telegram_bot/: bot.py  middlewares.py  services_factory.py  user_resolver.py
receptor/telegram_bot/handlers/: __init__.py  commons.py  errors.py  fallback.py  menu.py  profile.py  start.py  user.py
receptor/telegram_bot/keyboards/: balance.py  main.py  menu.py  settings.py
receptor/telegram_bot/states/: excluded_products.py  settings.py
receptor/utils/: errors.py  types.py
(+28 files in other folders)
