[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = 'receptor'
version = '0.1.0'
description = 'Tool for AI-generated recipes'
authors = [
    { name='Vladislav Morozov', email='md.morozov.va@gmail.com'}
]
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
    'fastapi>=0.110.0',
    'uvicorn[standard]>=0.29.0',
    'sqlalchemy[asyncio]>=2.0.29',
    'asyncpg>=0.29.0',
    'pydantic>=2.6.3',
    'pydantic[email]>=2.6.3',
    'pydantic-settings>=2.2.1',
    'alembic>=1.13.1',
    'python-dotenv>=1.0.1',
]

[project.optional-dependencies]
dev = [
    'pytest>=7.4.0',
    'pytest-asyncio>=0.23.2',
    'httpx>=0.24.1',
    'ruff>=0.3.0',
]

[tool.setuptools.packages.find]
where = ['.']
include = ['receptor*']

[tool.flake8]
max-line-length = 88
max-local-variables = 8
exclude = [
    '*venv',
    'build',
    'dist',
    'alembic',
    'reading_list/db/seed.py',
    'reading_list.egg-info',
    '.git',
    '.idea',
    'tests',
]
ignore = [  # Данные ораничения оспоримы, но в текущем контексте кажутся логичными
    'D100',
    'D101',
    'D102',
    'D103',
    'D104',
    'D107',
    'D204',
    'DAR101',
    'DAR201',
    'WPS602',
    'WPS305',
    'WPS214',
    'WPS237',
    'WPS326'
]

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88