[project]
name = "receptor"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladislav Morozov",email = "landaren11@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12,<3.15"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "sqlalchemy (>=2.0.46,<3.0.0)",
    "sqladmin (>=0.22.0,<0.23.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.3,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiogram (>=3.26.0,<4.0.0)"
]

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "pytest-asyncio (>=0.25.3,<1.0.0)",
    "httpx (>=0.28.1,<1.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
